chore: update Minecraft version to 26.2 and adjust Java toolchain compatibility